istio/templates/gateway/public-ingress-gateway.gotmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-ingress-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.karafra.net'
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: public-ingress-gateway-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: name
                operator: In
                values:
                  - infra-monitoring
                  - argocd
